--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script>
         window.ChatWidgetConfig = {
             webhook: {
-                url: 'https://n8n.devmesh.xyz/webhook/932dc328-f1bc-470e-ae29-3cb593f439a4/chat',
+                url: 'https://didai.serveirc.com/webhook/ed4b72f0-02c3-49aa-a353-ec32c02a5966/chat',
                 route: 'general'
             },
             branding: {
@@ -167,3 +167,4 @@
     <script src="https://cdn.jsdelivr.net/gh/juansebsol/n8n-chatbot-template@latest/chat-widget.js"></script>
 </body>
 </html>
+
