--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 secondaryColor: '#6b3fd4',
                 position: 'right',
                 backgroundColor: '#0d1123ff',
-                fontColor: '#333333'
+                fontColor: '#ffffff'
             }
         };
 
